--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,22 +12,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          npm install
+          yarn
       - run: |
-          npm run all
+          yarn all
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: docker/login-action@v1.9.0
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: ./
         with:
-         src: docker.io/node:16
-         destinations: |
-          docker.io/u4ic/test-node:node-16
-          docker.io/u4ic/test-node:latest
-          docker.io/u4ic/test-node2:latest
-
+          src: docker.io/node:16
+          destinations: |
+            docker.io/u4ic/test-node:node-16
+            docker.io/u4ic/test-node:latest
+            docker.io/u4ic/test-node2:latest
