--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint -c .eslintrc.json src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "yarn build && yarn format && yarn lint && yarn package && yarn test"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6",
+    "@actions/core": "1.2.6",
     "@actions/exec": "1.0.4",
     "csv-parse": "4.15.4"
   },
