--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,11 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "schedule:daily", "group:allNonMajor"],
+  "extends": [
+    "config:recommended",
+    "schedule:daily",
+    "group:allNonMajor"
+  ],
+  "rangeStrategy": "pin",
   "reviewersFromCodeOwners": true,
   "labels": ["dependencies"],
   "vulnerabilityAlerts": {
