--- a/package.json
+++ b/package.json
@@ -1,29 +1,77 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "docker-promote-image",
+  "description": "GitHub Actions to promote docker images",
+  "version": "2.0.0",
+  "author": "",
   "private": true,
-  "description": "TypeScript template action",
-  "main": "lib/main.js",
-  "scripts": {
-    "build": "tsc",
-    "format": "prettier --write **/*.ts",
-    "format-check": "prettier --check **/*.ts",
-    "lint": "eslint -c .eslintrc.json src/**/*.ts",
-    "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "yarn build && yarn format && yarn lint && yarn package && yarn test"
-  },
+  "homepage": "https://github.com/euphoricsystems/docker-promote-image",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/euphoricsystems/docker-promote-image.git"
+  },
+  "bugs": {
+    "url": "https://github.com/euphoricsystems/docker-promote-image/issues"
   },
   "keywords": [
     "actions",
     "node",
     "setup"
   ],
-  "author": "",
+  "exports": {
+    ".": "./dist/index.js"
+  },
+  "engines": {
+    "node": ">=20"
+  },
+  "scripts": {
+    "bundle": "yarn run format:write && yarn run package",
+    "ci-test": "jest",
+    "coverage": "make-coverage-badge --output-path ./badges/coverage.svg",
+    "format:write": "prettier --write **/*.ts",
+    "format:check": "prettier --check **/*.ts",
+    "lint": "npm-run-all lint:check:*",
+    "lint:fix": "npm-run-all lint:fix:*",
+    "lint:fix:eslint": "eslint --fix . -c ./.github/linters/.eslintrc.yml",
+    "lint:fix:markdown": "markdownlint --fix . -c ./.github/linters/.markdown-lint.yml",
+    "lint:fix:yaml": "yamllint --fix -c .github/linters/.yaml-lint.yml",
+    "lint:check:eslint": "eslint . -c ./.github/linters/.eslintrc.yml",
+    "lint:check:markdown": "markdownlint . -c ./.github/linters/.markdown-lint.yml",
+    "lint:check:yaml": "yamllint - c .github/linters/.yaml-lint.yml",
+    "package": "ncc build src/index.ts --license licenses.txt",
+    "package:watch": "yarn run package -- --watch",
+    "test": "jest",
+    "all": "yarn run format:write && yarn run lint && yarn run test && yarn run coverage && yarn run package"
+  },
   "license": "MIT",
+  "jest": {
+    "preset": "ts-jest",
+    "verbose": true,
+    "clearMocks": true,
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "testMatch": [
+      "**/*.test.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ],
+    "transform": {
+      ".+\\.ts$": "ts-jest"
+    },
+    "coverageReporters": [
+      "json-summary",
+      "text",
+      "lcov"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "./src/**"
+    ]
+  },
   "dependencies": {
     "@actions/core": "1.10.1",
     "@actions/exec": "1.1.1",
@@ -32,17 +80,25 @@
   "devDependencies": {
     "@types/jest": "29.5.12",
     "@types/node": "20.11.16",
-    "@types/semver": "7.5.6",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
     "@vercel/ncc": "0.38.1",
     "eslint": "8.56.0",
     "eslint-plugin-github": "4.10.1",
     "eslint-plugin-jest": "27.6.3",
+    "eslint-plugin-jsonc": "2.13.0",
+    "eslint-plugin-prettier": "5.1.3",
     "jest": "29.7.0",
-    "jest-circus": "29.7.0",
-    "js-yaml": "4.1.0",
+    "make-coverage-badge": "1.2.0",
+    "markdownlint-cli": "0.27.1",
+    "npm-run-all": "4.1.5",
     "prettier": "3.2.5",
+    "prettier-eslint": "16.3.0",
     "ts-jest": "29.1.2",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "yaml-lint": "1.7.0"
+  },
+  "eslintConfig": {
+
   }
 }
