--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,6 +2,9 @@ name: Lint Codebase
 
 on:
   pull_request:
+    branches-ignore:
+      - "release-please-**"
+      - 
   push:
     branches:
       - main
