ci: updated triggers

--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -11,9 +11,8 @@ name: Check Transpiled JavaScript
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
+    branches-ignore:
+      - "release-please-**"
 
 permissions:
   contents: read
